gitops/monitoring/ingressroute-alertmanager.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`alertmanager.froystein.jp`)
      priority: 12
      services:
        - name: alertmanager-main
          port: 9093
